Package_Tools/glib/Package_Tools/include-C/glib-2.0/gio/in_arbeit/fertig/giostream.h

#define G_TYPE_IO_STREAM         (g_io_stream_get_type ())
#define G_IO_STREAM(o)           (G_TYPE_CHECK_INSTANCE_CAST ((o), G_TYPE_IO_STREAM, GIOStream))
#define G_IO_STREAM_CLASS(k)     (G_TYPE_CHECK_CLASS_CAST((k), G_TYPE_IO_STREAM, GIOStreamClass))
#define G_IS_IO_STREAM(o)        (G_TYPE_CHECK_INSTANCE_TYPE ((o), G_TYPE_IO_STREAM))
#define G_IS_IO_STREAM_CLASS(k)  (G_TYPE_CHECK_CLASS_TYPE ((k), G_TYPE_IO_STREAM))
#define G_IO_STREAM_GET_CLASS(o) (G_TYPE_INSTANCE_GET_CLASS ((o), G_TYPE_IO_STREAM, GIOStreamClass))
typedef struct _GIOStreamClass                              GIOStreamClass;
GType          g_io_stream_get_type          (void)  ;
GInputStream * g_io_stream_get_input_stream  (GIOStream            *stream);
GOutputStream *g_io_stream_get_output_stream (GIOStream            *stream);
void           g_io_stream_splice_async      (GIOStream            *stream1,
					      GIOStream            *stream2,
					      GIOStreamSpliceFlags  flags,
					      int                   io_priority,
					      GCancellable         *cancellable,
					      GAsyncReadyCallback   callback,
					      gpointer              user_data);
gboolean       g_io_stream_splice_finish     (GAsyncResult         *result,
                                              GError              **error);
gboolean       g_io_stream_close             (GIOStream            *stream,
					      GCancellable         *cancellable,
					      GError              **error);
void           g_io_stream_close_async       (GIOStream            *stream,
					      int                   io_priority,
					      GCancellable         *cancellable,
					      GAsyncReadyCallback   callback,
					      gpointer              user_data);
gboolean       g_io_stream_close_finish      (GIOStream            *stream,
					      GAsyncResult         *result,
					      GError              **error);
gboolean       g_io_stream_is_closed         (GIOStream            *stream);
gboolean       g_io_stream_has_pending       (GIOStream            *stream);
gboolean       g_io_stream_set_pending       (GIOStream            *stream,
					      GError              **error);
void           g_io_stream_clear_pending     (GIOStream            *stream);